commit al master dl blogpost en su version mas reciene

--- a/blogpost.html
+++ b/blogpost.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Blog de Jorge Escorcia</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
-    <h1> Mi blogpost </h1>
-    <p> Este es el primer parrafo de mi inicio</p>
-    
-</body>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1> Mi blogpost </h1>
+                <p> Este es el primer parrafo de mi inicio, aqui explicaremos las cosas interesantes que podemos hacer en ramas </p>
+            </div>
+        </div>
+    </body>
 </html>
