with '#' will be ignored, and an empty message aborts the commit.

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+            </div>
+                cabecera
             <div id="post">
                 <h1> Mi blogpost </h1>
                 <p> Este es el primer parrafo de mi inicio, aqui explicaremos las cosas interesantes que podemos hacer en ramas </p>
