Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,11 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                Hyperblog
+                <span id="tagline"> Tu blog de confianza</span>
             </div>
-                cabecera
             <div id="post">
-                <h1> Mi blogpost </h1>
+                <h1> Tienda Virtual de Jorge Escorcia</h1>
                 <p> Este es el primer parrafo de mi inicio, aqui explicaremos las cosas interesantes que podemos hacer en ramas </p>
             </div>
         </div>
