Agregado el contenido adicional del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
             <div id="post">
                 <h1> Mi blogpost </h1>
                 <p> Este es el primer parrafo de mi inicio, aqui explicaremos las cosas interesantes que podemos hacer en ramas </p>
+                    <p>Con un blog puedes realizar diferentes publicaciones donde puedas entretener a diversas personas.
+                        Eso es lo bueno de cuando haces lo que quieres y te apasiona</p>
+                    </p>
             </div>
         </div>
     </body>
