Agregado informacion de contacto al final

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,10 @@
             <div id="post">
                 <h1> Tienda Virtual de Jorge Escorcia</h1>
                 <p> Este es el primer parrafo de mi inicio, aqui explicaremos las cosas interesantes que podemos hacer en ramas </p>
-                    <p>Con un blog puedes realizar diferentes publicaciones donde puedas entretener a diversas personas.
+                <p>Con un blog puedes realizar diferentes publicaciones donde puedas entretener a diversas personas.
                         Eso es lo bueno de cuando haces lo que quieres y te apasiona</p>
-                    </p>
+                </p>
+                <p>SI DESEAS MAS INFORMACION: 3178811615</p>
             </div>
         </div>
     </body>
