--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog de Jorge Escorcia</title>
+    <title>Bienvenido a Hyperblog</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
     <body>
