--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                    <img id="logo" src="images/trekking.png"/>
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
