--- a/blogpost.html
+++ b/blogpost.html
@@ -1,3 +1,4 @@
+html.
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,6 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                    <img id="logo" src="images/trekking.png"/>
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
@@ -23,3 +23,6 @@
         </div>
     </body>
 </html>
+
+
+
