--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
             <div id="post">
                 <h1> Tienda Virtual de Jorge Escorcia</h1>
                 <p> Este es el primer p&aacute;rrafo de mi inicio, aqu&iacute; explicaremos las cosas interesantes que podemos hacer en ramas </p>
+                <p> <img src="images/cerro.jpg" width="100%"/> </p>
                 <p>Con un blog puedes realizar diferentes publicaciones donde puedas entretener a diversas personas.
                         Eso es lo bueno de cuando haces lo que quieres y te apasiona</p>
                     <p>SI DESEAS MAS INFORMACION: 3178811615</p>
