--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,8 @@
                 <p>Con un blog puedes realizar diferentes publicaciones donde puedas entretener a diversas personas.
                         Eso es lo bueno de cuando haces lo que quieres y te apasiona</p>
                     <p>SI DESEAS MAS INFORMACION: 3178811615</p>
+                    <p> <a href="https://imgur.com/P0uCD21"><img src="https://i.imgur.com/P0uCD2l.jpg"width="100%"title="ANIMATE A VIVIR AVENTURAS" /></a></p>
+
             </div>
         </div>
     </body>
