--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
                         Eso es lo bueno de cuando haces lo que quieres y te apasiona</p>
                     <p>SI DESEAS MAS INFORMACION: 3178811615</p>
                     <p> <a href="https://imgur.com/P0uCD21"><img src="https://i.imgur.com/P0uCD2l.jpg"width="100%"title="ANIMATE A VIVIR AVENTURAS" /></a></p>
-
+                <div id="footer"> Disfruta de la vida</div>
             </div>
         </div>
     </body>
